--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,9 @@ dependencies {
     compile "javax.servlet:javax.servlet-api:3.1.0"
     testCompile "junit:junit:4.11"
 
+    compile "log4j:log4j:1.2.17"
+    compile "org.slf4j:slf4j-log4j12:1.7.13"
+
     compile "org.springframework:spring-jdbc:${springVersion}"
     compile "org.springframework:spring-tx:${springVersion}"
     compile "org.springframework:spring-webmvc:${springVersion}"
@@ -30,9 +33,7 @@ dependencies {
     compile "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}"
     compile "com.fasterxml.jackson.core:jackson-annotations:${jacksonVersion}"
     compile "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:${jacksonVersion}"
-    compile "org.springframework:spring-jdbc:${springVersion}"
-    compile "org.springframework:spring-tx:${springVersion}"
-    compile "org.springframework:spring-webmvc:${springVersion}"
+
     compile "org.mybatis:mybatis:3.3.0"
     compile "org.mybatis:mybatis-spring:1.2.3"
     compile "mysql:mysql-connector-java:5.1.38"
