--- a/src/main/webapp/WEB-INF/jdbc.properties
+++ b/src/main/webapp/WEB-INF/jdbc.properties
@@ -1,5 +1,5 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306
+jdbc.url=jdbc:mysql://localhost:3306/blog_center?&characterEncoding=utf8
 jdbc.username=root
 jdbc.password=1234
 jdbc.validationQuery=select 1
