[IMP]新增总的异常处理方式，增加登陆中的过程逻辑

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,9 +7,7 @@
     <servlet>
         <!--这个名字必须在多个地方都是相同的-->
         <servlet-name>springmvc</servlet-name>
-        <servlet-class>
-            org.springframework.web.servlet.DispatcherServlet
-        </servlet-class>
+        <servlet-class>com.blog.common.CoreDispatcherServlet</servlet-class>
         <init-param>
             <param-name>contextConfigLocation</param-name>
             <!--当前的SpringMVC的配置文件-->
